name:                playground
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ethanSchoen/playground#readme
license:             BSD3
license-file:        LICENSE
author:              Ethan Schoen
maintainer:          eschoen1@binghamton.edu
copyright:           2017 Ethan Schoen
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable playground
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
